[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/gui/msgbox/msgbox1.png" type="Texture" id=1]
[ext_resource path="res://scenes/gui/message_box/DlgText.gd" type="Script" id=2]
[ext_resource path="res://scenes/gui/message_box/MessageBox.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/LiberationSerif/20/LiberationSerif-Italic-20.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/LiberationSerif/20/LiberationSerif-20.tres" type="DynamicFont" id=5]

[node name="Main" type="AspectRatioContainer"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 312.0
margin_bottom = -53.0
focus_mode = 2
input_pass_on_modal_close_click = false
ratio = 1.778
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
message_speed = 2.0

[node name="DlgBox" type="NinePatchRect" parent="."]
margin_left = 324.421
margin_right = 699.579
margin_bottom = 211.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="DlgText" type="RichTextLabel" parent="DlgBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 11.0
margin_right = -9.14001
margin_bottom = -11.0
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "This [i]dialog[/i] box is used to display help messages and notifications."
text = "This dialog box is used to display help messages and notifications."
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="DlgBox/DlgText"]
one_shot = true

[node name="WaitTimer" type="Timer" parent="DlgBox/DlgText"]
one_shot = true

[connection signal="message_finished" from="DlgBox/DlgText" to="." method="_handle_message_finished"]
[connection signal="timeout" from="DlgBox/DlgText/MessageTimer" to="DlgBox/DlgText" method="_on_message_timeout"]
